--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,14 @@
 <html>
     <head>
-        <title>Blog title</title>
-        <link rel="stylesheet" href="css/style.css">
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <h1>Here we will create a post</h1>
-        <p>first parapgraph</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
     </body>
 </html>
